// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteListUtils should hide all options for encrypted 1`] = `[]`;

exports[`NoteListUtils should show menu options for normal notes 1`] = `
[
  MenuItem {
    "value": {
      "accelerator": "Ctrl+Alt+N",
      "click": [Function],
      "enabled": false,
      "id": "openNoteInNewWindow",
      "label": "Open in new window",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "startExternalEditing",
      "label": "Open in external editor",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "accelerator": "Ctrl+Alt+T",
      "click": [Function],
      "enabled": false,
      "id": "setTags",
      "label": "Tags",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "toggleNoteType",
      "label": "Switch between note and to-do type",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "moveToFolder",
      "label": "Move to notebook",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "duplicateNote",
      "label": "Duplicate",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "deleteNote",
      "label": "Delete note",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "label": "Copy Markdown link",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "label": "Copy external link",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "label": "Export",
      "submenu": MockMenu {
        "items": [
          MenuItem {
            "value": {
              "click": [Function],
              "label": "JEX - Joplin Export File",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "RAW - Joplin Export Directory",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "MD - Markdown",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "MD - Markdown + Front Matter",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "HTML - HTML File",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "HTML - HTML Directory",
            },
          },
          MenuItem {
            "value": {
              "accelerator": null,
              "click": [Function],
              "enabled": false,
              "id": "exportPdf",
              "label": "PDF - PDF File",
            },
          },
        ],
      },
    },
  },
]
`;

exports[`NoteListUtils should show only trash menu options on deleted note 1`] = `
[
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "restoreNote",
      "label": "Restore note",
    },
  },
  MenuItem {
    "value": {
      "accelerator": null,
      "click": [Function],
      "enabled": false,
      "id": "permanentlyDeleteNote",
      "label": "Permanently delete note",
    },
  },
]
`;

exports[`NoteListUtils should show options when more than one note is selected 1`] = `
[
  MenuItem {
    "value": {
      "accelerator": "Ctrl+Alt+T",
      "click": [Function],
      "enabled": false,
      "id": "setTags",
      "label": "Tags",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "label": "Switch to note type",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "label": "Switch to to-do type",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "moveToFolder",
      "label": "Move to notebook",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "duplicateNote",
      "label": "Duplicate",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "enabled": false,
      "id": "deleteNote",
      "label": "Delete note",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "click": [Function],
      "label": "Copy Markdown link",
    },
  },
  MenuItem {
    "value": {
      "type": "separator",
    },
  },
  MenuItem {
    "value": {
      "label": "Export",
      "submenu": MockMenu {
        "items": [
          MenuItem {
            "value": {
              "click": [Function],
              "label": "JEX - Joplin Export File",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "RAW - Joplin Export Directory",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "MD - Markdown",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "MD - Markdown + Front Matter",
            },
          },
          MenuItem {
            "value": {
              "click": [Function],
              "label": "HTML - HTML Directory",
            },
          },
          MenuItem {
            "value": {
              "accelerator": null,
              "click": [Function],
              "enabled": false,
              "id": "exportPdf",
              "label": "PDF - PDF File",
            },
          },
        ],
      },
    },
  },
]
`;
